hphp/hack/test/typecheck/array/disallow_incompatible_type_parameters_for_darray.php.exp
File "disallow_incompatible_type_parameters_for_darray.php", line 4, characters 10-15:
Invalid return type (Typing[4110])
File "disallow_incompatible_type_parameters_for_darray.php", line 3, characters 25-30:
This is a string
File "disallow_incompatible_type_parameters_for_darray.php", line 4, characters 17-20:
It is incompatible with a bool
